--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
 
     
-    <script src="./JS/app.js"></script>
+    <!-- <script src="./JS/app.js"></script> -->
+    <script src="./JS/problems.js"></script>
 </body>
 </html>
